# gws-rag-ai

./: .gitignore  README.md  add_and_query_demo.py  memory.json  process_file_for_qa.py  start_gsw.py
gsw-learning-mvp/: .env.example  README.md  pyproject.toml  requirements.txt
gsw-learning-mvp/docs/: learning_summary.md  user_guide.md
gsw-learning-mvp/src/: __init__.py  config_manager.py  file_reader.py  gsw_learning_system.py  memory_store.py  operator_ai_agent.py  reconciler.py  text_chunker.py
